Allow incrementing equipment versions
Allow users to increment the versions of exiting equipment in
order to keep their NeTEx ID consistent.